--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="<a href="https://www.flaticon.com/free-icons/team-sport" title="team sport icons">Team sport icons created by Freepik - Flaticon</a>"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sppoorrt</title>
   </head>
